...
    android:layout_height="match_parent"
    android:filterTouchesWhenObscured="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="75dp">

    <TextView
        android:id="@+id/right_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="3dp"
        android:filterTouchesWhenObscured="true"
...
        android:layout_toStartOf="@+id/right_textview"
        android:filterTouchesWhenObscured="true"
        android:textColor="@color/dark_blue"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/left_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/double_arrow_text"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_toStartOf="@+id/double_arrow_text"
...
