...
            android:textAllCaps="false"
            android:textColor="@color/dark_blue"
            android:textSize="16sp" />


        <Button
        android:id="@+id/main_button_pay_address_from_clipboard"
        android:layout_width="240dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_regular_blue"
        android:filterTouchesWhenObscured="true"
...
            android:textColor="@color/dark_blue"
            android:textSize="16sp" />

    </LinearLayout>

    <EditText
        android:id="@+id/address_edit_text"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@+id/scan_clipboard_buttons_layout"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
...
